Changed file structure

--- a/src/exercise3.html
+++ b/src/exercise3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-	<link href="css/myStyle.css"
+	<link href="../css/myStyle.css"
 				rel="stylesheet"
 				type="text/css"/>
 
@@ -12,7 +12,7 @@
 
   <body>
 
-<img src = "img/Spot.jpg" id = "img" width= 30%/>
+<img src = "../img/Spot.jpg" id = "img" width= 30%/>
 <br>
 <h1> Spot - Data's Cat </h1>
 <h3> (text from Wikipedia) </h3>
