--- a/src/exercise4.html
+++ b/src/exercise4.html
@@ -2,12 +2,12 @@
 <html>
   <head>
 
-	<link href="css/ex4style.css"
+	<link href="../css/ex4style.css"
 				rel="stylesheet"
 				type="text/css"/>
 
 		<script type="text/javascript"
-				src="js/Ex4.js">
+				src="../js/Ex4.js">
 
 
 		</script>
