--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 	<h1> EECS 448 - Lab 3 </h1>
 
-	<a href="exercise1.html">Exercise 1 - Password Validator</a>
+	<a href="src/exercise1.html">Exercise 1 - Password Validator</a>
 	<br>
-	<a href="exercise2.html">Exercise 2 - Photo Slideshow</a>
+	<a href="src/exercise2.html">Exercise 2 - Photo Slideshow</a>
 	<br>
-	<a href="exercise3.html">Exercise 3 - Personal Profile</a>
+	<a href="src/exercise3.html">Exercise 3 - Personal Profile</a>
 	<br>
-	<a href="exercise4.html">Exercise 4 - CSS Manipulation</a>
+	<a href="src/exercise4.html">Exercise 4 - CSS Manipulation</a>
 
 	<br><br>
 	<img src = "img/sprucetrees.jpg" id = "img"/>
